Changes in version 1.0
----------------------

* Forked Uncommons Antlib 0.3.3 and removed DocBook and Maven support.

* Converted names, packages and paths to Rectangular Software ones.

* Simplified macros by assuming all projects are Android projects.

* Updated to latest versions of TestNG, ReportNG and Cobertura.

* Removed bundled Proguard.  Now uses Android SDK version instead.