@@ -342,72 +342,6 @@
   </macrodef>
 
 
-  <!-- Copy all JARs and runtime libs to the dist directory.  Excludes source JARs
-       (those that end with "-src.jar"). -->
-  <macrodef name="dist">
-    <attribute name="libdir" default="lib" description="Sub-directory for libs, leave blank to place libs directly in the dist dir."/>
-    <sequential>
-      <current:defaults />
-      <mkdir dir="${dist.dir}" />
-      <copy todir="${dist.dir}" flatten="true">
-        <fileset dir="." includes="**/${build.dir}/*.jar" excludes="**/${build.dir}/*-src.jar"/>
-      </copy>
-      <mkdir dir="${dist.dir}/@{libdir}" />
-      <copy todir="${dist.dir}/@{libdir}" flatten="true">
-        <fileset dir="." includes="**/${lib.runtime}/*"/>
-      </copy>
-    </sequential>
-  </macrodef>
-
-
-  <!-- Builds release archives (both zip and tgz) for the project.  By default, these
-       archives include the full contents of the dist directory, the API docs, and any
-       .txt files from the root of the project (e.g. README.txt, LICENCE.txt, CHANGELOG.txt).
-       Additional contents can be specified with nested zipfileset or tarfileset tags. -->       
-  <macrodef name="release">
-    <attribute name="name"/>
-    <element name="additionalcontents" optional="true"/>
-    <sequential>
-      <current:defaults />
-
-      <mkdir dir="${release.dir}" />
-      <!-- Create a GZipped TAR file containing the built binaries, the API
-           documentation, and source code for the examples. -->
-      <tar destfile="${release.dir}/@{name}.tgz"
-           compression="gzip"
-           longfile="gnu">
-        <tarfileset dir="${dist.dir}"
-                    prefix="@{name}"
-                    includes="**/*" />
-        <tarfileset dir="${api.dir}"
-                    prefix="@{name}/docs/api"
-                    includes="**/*"
-                    erroronmissingdir="false" />
-        <!-- Don't forget to include the licence and other important information. -->
-        <tarfileset dir="."
-                    prefix="@{name}"
-                    includes="*.txt" />
-        <additionalcontents/>
-      </tar>
-      <!-- Also create a zip file release for the convenience of Windows users. -->
-      <zip destfile="${release.dir}/@{name}.zip">
-        <zipfileset dir="${dist.dir}"
-                    prefix="@{name}"
-                    includes="**/*" />
-        <zipfileset dir="${api.dir}"
-                    prefix="@{name}/docs/api"
-                    includes="**/*"
-                    erroronmissingdir="false" />
-        <!-- Don't forget to include the licence and other important information. -->
-        <zipfileset dir="."
-                    prefix="@{name}"
-                    includes="*.txt" />
-        <additionalcontents/>
-      </zip>
-    </sequential>
-  </macrodef>
-
-
   <!-- Generate the Android R.java source file from the resources directory. -->
   <macrodef name="resources">
     <attribute name="manifest" default="AndroidManifest.xml" />
